2006-12-13  Frank Lanitz  <frank@frank.uvena.de>

 * THANKS: Small update of contact data and small fix of translated 
   language. 


2006-12-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/about.c, src/treeviews.c, src/msgwindow.c,
   src/callbacks.c, src/keyfile.c, src/document.c, src/prefs.c,
   src/main.c, src/ui_utils.c:
   Fix memory leaks when using GdkPixbuf, PangoFontDescription and some
   strings.
   Capitalize main window title.
   Add ui_widget_modify_font_from_string().
 * src/build.c, src/keybindings.c, src/msgwindow.c, src/msgwindow.h,
   src/vte.c, src/main.c:
   Add 'Hide Message Window' popup menu item for each window in the
   message window area.
   Add msgwin_menu_add_common_items().
   Move remaining message window setup code to msgwin_init().
 * src/interface.c, geany.glade:
   Add 'Invert syntax highlighting colours' Preferences dialog option
   (hidden for now).


2006-12-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/geany.h, src/keyfile.c, src/sciwrappers.c,
   src/sciwrappers.h: Added option to toggle usage of Tab button for
                      indentation.
 * geany.glade, po/POTFILES.in, src/callbacks.c, src/callbacks.h,
   src/interface.c, src/keybindings.c, src/keybindings.h,
   src/Makefile.am, src/makefile.win32, src/tools.c, src/tools.h:
   New files tools.c and tools.h.
   Added a dialog to insert HTML special characters.


2006-12-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/interface.c, src/callbacks.c, src/ui_utils.c,
   geany.glade:
   Use GNOME HIG Header style capitalization for all menu items.
 * src/main.c:
   Make files loaded from the command-line at startup get added to the
   recent files menus.


2006-12-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.vhdl: Fixed typo in "number" and "string" styles.


2006-12-11  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c: